# Tripartite1

./: .editorconfig  .gitignore  ARCHITECTURE.md  ASYNC_PATTERNS_RUST.md  BENCHMARKING_GUIDE.md  BENCHMARKING_QUICKREF.md  BENCHMARKS.md  BRANDING_COMPLETION_REPORT.md  BRANDING_SUMMARY.md  BRAND_GUIDELINES.md  BRAND_QUICK_REFERENCE.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CLAUDE_CODE_BUILD_GUIDE.md  CODE_OF_CONDUCT.md  COMPARISON.md  COMPREHENSIVE_AUDIT_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCKSIDE-EXAM.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_SUMMARY_PROFESSIONAL.md  Dockerfile  FILE_WATCHER_QUICK_START.md  FINAL_COMPREHENSIVE_IMPROVEMENTS_REPORT.md  GITHUB_ISSUES.md  GITHUB_PUSH_GUIDE.md  GOVERNANCE.md  INTEGRATION_REPORT.md  INTEGRATION_RESEARCH_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  MANIFEST_COMMANDS_GUIDE.md  PERFORMANCE.md  PHASE_1_PARALLEL_EXECUTION_IMPLEMENTATION.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_ROADMAP.md  (+26 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  WORKFLOW_SUMMARY.md
agents/: ETHOS_AGENT.md  FRONTEND_AGENT.md  INFRASTRUCTURE_AGENT.md  LOGOS_AGENT.md  PATHOS_AGENT.md
architecture/: HIGH_LEVEL.md  LOW_LEVEL.md  MEDIUM_LEVEL.md
benches/: README.md  agent_execution.rs  benchmarks.rs  consensus.rs  consensus_engine.rs  knowledge_vault.rs  privacy_redaction.rs  query_processing.rs
cloud/: README.md  package.json  tsconfig.json  wrangler.toml
crates/synesis-core/: Cargo.toml
crates/synesis-core/src/: council.rs  error.rs  lib.rs  manifest.rs  metrics.rs  routing.rs
crates/synesis-core/src/agents/: ethos.rs  logos.rs  mod.rs  pathos.rs
crates/synesis-core/src/consensus/: mod.rs
crates/synesis-knowledge/: Cargo.toml
crates/synesis-knowledge/src/: chunker.rs  embeddings.rs  indexer.rs  lib.rs  search.rs  vault.rs  vault_fixed.rs  watcher.rs
crates/synesis-models/: Cargo.toml
crates/synesis-models/src/: downloader.rs  hardware.rs  inference.rs  lib.rs  manifest.rs  registry.rs
crates/synesis-privacy/: Cargo.toml
crates/synesis-privacy/src/: lib.rs  patterns.rs  redactor.rs  vault.rs
docs/: README.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
examples/: README.md  basic_usage.rs  knowledge_rag.rs  privacy_proxy.rs  test_manifest.rs
manifests/: MANIFEST_SUMMARY.md  README.md  apple-m2.json  jetson-orin-nano.json  minimal.json  rtx-4050-laptop.json  schema.json  standard.json
migration_guides/: 0.1.0-to-0.2.0.md  README.md
phases/: PHASE_1_LOCAL_KERNEL.md  PHASE_1_REFINEMENTS.md  PHASE_2_CLOUD_MESH.md  PHASE_2_DETAILED_ROADMAP.md  PHASE_3_MARKETPLACE.md  PHASE_4_UTILITY.md
prompts/: REVIEW_PROMPTS.md  WORKER_PROMPTS.md
scripts/: benchmark.sh  performance_test.sh  setup-dev.sh
search.index/: 00c58bd8c901.js  00e0ffafd962.js  01b4453c82b8.js  01d338211c99.js  02375110dcad.js  033a030218ed.js  03dad654469a.js  044f8bd9b931.js  0483c35da979.js  049807fd7e81.js  04e6a83471c5.js  051e2f600668.js  05a922670bb8.js  05ef972b88ee.js  069e389d7286.js  071109552d09.js  0736d022a8f0.js  076a59f56274.js  07c1bde41460.js  07c528aca81b.js  07ce9ec2d97e.js  080323aae161.js  0808df7a84d0.js  082dbd99afc0.js  08d651450b93.js  0967bc0ae677.js  096e946585c6.js  09c524d28376.js  0afb3ca04c1a.js  0b322cda7e16.js  0b495f7a98ff.js  0bbc87eb7c7c.js  0bde48a0639c.js  0c333bd3405e.js  0cbf10d0f536.js  0d231e25df62.js  0e3d9298bc6b.js  0ec2d788720c.js  0ef5e929e343.js  0f4508233a99.js  (+283 more)
status/: BENCHMARKING_COMPLETE.md  BUG_HUNT_FIXES_APPLIED.md  BUILD_STATUS.md  CHANGELOG.md  CI_CD_SETUP_COMPLETE.md  COMPREHENSIVE_AUDIT_REPORT_FINAL.md  COMPREHENSIVE_BUG_REPORT_SYNESIS_CORE.md  COMPREHENSIVE_DEBUGGING_REPORT.md  (+27 more)
(+784 files in other folders)
