[package]
name = "synesis-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model management and inference for SuperInstance AI"

[dependencies]
# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# HTTP for downloads
reqwest.workspace = true

# Crypto for checksums
sha2.workspace = true
hex.workspace = true

# IDs
uuid.workspace = true

# Time
chrono.workspace = true

# Directories
dirs.workspace = true

# System info
sysinfo.workspace = true

# Progress bars (for downloads)
indicatif.workspace = true

# Async traits
async-trait.workspace = true

# Async utilities
futures-util = "0.3"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
